[package]
name = "quilt-installer"
description = "The installer for quilt-loader"
version = "0.1.1"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
native-dialog = { version = "0.6", features = ["windows_dpi_awareness"] }
iced = { version = "0.6", default-features = false, features = [
    "glow",
    "tokio",
] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
# clap = { version = "4.0", features = ["derive"] }
dark-light = "1.0"
serde_json = "1.0"
base64 = "0.20"
anyhow = "1.0"
png = "0.17"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
